// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET /internships Internships_200 1`] = `
Object {
  "data": Array [
    Object {
      "additional": null,
      "address": null,
      "category": Object {
        "createdAt": Any<String>,
        "deletedAt": null,
        "id": Any<Number>,
        "label": "test",
        "updatedAt": Any<String>,
      },
      "city": "Brest",
      "country": "France",
      "createdAt": Any<String>,
      "deletedAt": null,
      "description": "Stage",
      "endAt": null,
      "id": Any<Number>,
      "isInternshipAbroad": true,
      "postalCode": null,
      "publishAt": null,
      "result": "unknown",
      "startAt": null,
      "state": "published",
      "subject": "test",
      "updatedAt": Any<String>,
    },
  ],
  "length": 1,
  "max": 1,
  "page": 1,
}
`;

exports[`GET /internships/:id Internships_200 1`] = `
Object {
  "additional": null,
  "address": null,
  "availableCampaign": null,
  "business": null,
  "category": null,
  "city": "Brest",
  "country": "France",
  "createdAt": Any<String>,
  "deletedAt": null,
  "description": "Stage",
  "endAt": null,
  "files": Array [],
  "id": Any<Number>,
  "isInternshipAbroad": true,
  "mentor": null,
  "postalCode": null,
  "propositions": Array [],
  "publishAt": null,
  "result": "unknown",
  "startAt": null,
  "state": "published",
  "student": null,
  "subject": "test",
  "updatedAt": Any<String>,
  "validatedCampaign": null,
}
`;

exports[`GET /internships/:id/availableCampaigns Internships_200_WithLinkedData 1`] = `
Object {
  "createdAt": Any<String>,
  "deletedAt": null,
  "description": "A description to test",
  "endAt": 20191012,
  "id": Any<Number>,
  "isPublish": true,
  "maxProposition": 2,
  "name": "test",
  "semester": "S5",
  "startAt": 0,
  "updatedAt": Any<String>,
}
`;

exports[`GET /internships/:id/businesses Internships_200_WithLinkedData 1`] = `
Object {
  "additional": null,
  "address": "TEST",
  "city": "Brest",
  "country": "France",
  "createdAt": Any<String>,
  "deletedAt": null,
  "id": Any<Number>,
  "name": "test",
  "postalCode": "29200",
  "updatedAt": Any<String>,
}
`;

exports[`GET /internships/:id/internshipTypes Internships_200_WithLinkedData 1`] = `
Object {
  "createdAt": Any<String>,
  "deletedAt": null,
  "id": Any<Number>,
  "label": "test",
  "updatedAt": Any<String>,
}
`;

exports[`GET /internships/:id/mentors Internships_200_WithLinkedData 1`] = `
Object {
  "createdAt": Any<String>,
  "deletedAt": null,
  "email": "john.doe@enib.fr",
  "firstName": "John",
  "id": Any<Number>,
  "lastName": "Doe",
  "role": "default",
  "updatedAt": Any<String>,
}
`;

exports[`GET /internships/:id/propositions Internships_200_WithLinkedData 1`] = `
Object {
  "comment": "test",
  "createdAt": Any<String>,
  "deletedAt": null,
  "id": Any<Number>,
  "updatedAt": Any<String>,
}
`;

exports[`GET /internships/:id/students Internships_200_WithLinkedData 1`] = `
Object {
  "createdAt": Any<String>,
  "deletedAt": null,
  "email": "john.doe@enib.fr",
  "firstName": "John",
  "id": Any<Number>,
  "lastName": "Doe",
  "semester": "S10",
  "updatedAt": Any<String>,
}
`;

exports[`GET /internships/:id/validatedCampaigns Internships_200_WithLinkedData 1`] = `
Object {
  "createdAt": Any<String>,
  "deletedAt": null,
  "description": "A description to test",
  "endAt": 20191012,
  "id": Any<Number>,
  "isPublish": true,
  "maxProposition": 2,
  "name": "test",
  "semester": "S5",
  "startAt": 0,
  "updatedAt": Any<String>,
}
`;

exports[`POST /internships ValidInternships_200 1`] = `
Object {
  "additional": "",
  "address": "",
  "availableCampaign": null,
  "business": null,
  "category": Object {
    "createdAt": Any<String>,
    "deletedAt": null,
    "id": Any<Number>,
    "label": "test",
    "updatedAt": Any<String>,
  },
  "city": "Brest",
  "country": "France",
  "createdAt": Any<String>,
  "deletedAt": null,
  "description": "Stage",
  "endAt": null,
  "files": Array [],
  "id": Any<Number>,
  "isInternshipAbroad": true,
  "mentor": null,
  "postalCode": "",
  "propositions": Array [],
  "publishAt": null,
  "result": "unknown",
  "startAt": null,
  "state": "waiting",
  "student": null,
  "subject": "test",
  "updatedAt": Any<String>,
  "validatedCampaign": null,
}
`;

exports[`POST /internships/:id/availableCampaigns/:campaign_id/link Internships_200_WithCampaign 1`] = `
Object {
  "createdAt": Any<String>,
  "deletedAt": null,
  "description": "A description to test",
  "endAt": 20191012,
  "id": Any<Number>,
  "isPublish": true,
  "maxProposition": 2,
  "name": "test",
  "semester": "S5",
  "startAt": 0,
  "updatedAt": Any<String>,
}
`;

exports[`POST /internships/:id/businesses/:business_id/link Internships_200_WithBusiness 1`] = `
Object {
  "additional": null,
  "address": "TEST",
  "city": "Brest",
  "country": "France",
  "createdAt": Any<String>,
  "deletedAt": null,
  "id": Any<Number>,
  "name": "test",
  "postalCode": "29200",
  "updatedAt": Any<String>,
}
`;

exports[`POST /internships/:id/internshipTypes/:internship_type_id/link Internships_200_WithInternshipType 1`] = `
Object {
  "createdAt": Any<String>,
  "deletedAt": null,
  "id": Any<Number>,
  "label": "test",
  "updatedAt": Any<String>,
}
`;

exports[`POST /internships/:id/mentors/:mentor_id/link Internships_200_WithMentor 1`] = `
Object {
  "createdAt": Any<String>,
  "deletedAt": null,
  "email": "john.doe@enib.fr",
  "firstName": "John",
  "id": Any<Number>,
  "lastName": "Doe",
  "role": "default",
  "updatedAt": Any<String>,
}
`;

exports[`POST /internships/:id/propositions/:mentoring_proposition_id/link Internships_200_WithPropositions 1`] = `
Object {
  "comment": "test",
  "createdAt": Any<String>,
  "deletedAt": null,
  "id": Any<Number>,
  "updatedAt": Any<String>,
}
`;

exports[`POST /internships/:id/students/:student_id/link Internships_200_WithStudent 1`] = `
Object {
  "createdAt": Any<String>,
  "deletedAt": null,
  "email": "john.doe@enib.fr",
  "firstName": "John",
  "id": Any<Number>,
  "lastName": "Doe",
  "semester": "S10",
  "updatedAt": Any<String>,
}
`;

exports[`PUT /internships/:id Internships_200_NotAnyDataUpdated 1`] = `
Object {
  "additional": null,
  "address": null,
  "city": "Brest",
  "country": "France",
  "createdAt": Any<String>,
  "deletedAt": null,
  "description": "Stage",
  "endAt": null,
  "id": Any<Number>,
  "isInternshipAbroad": true,
  "postalCode": null,
  "publishAt": null,
  "result": "unknown",
  "startAt": null,
  "state": "published",
  "subject": "test",
  "updatedAt": Any<String>,
}
`;

exports[`PUT /internships/:id Internships_200_UpdateAllData 1`] = `
Object {
  "additional": "additional data",
  "address": null,
  "city": "Brest",
  "country": "France",
  "createdAt": Any<String>,
  "deletedAt": null,
  "description": "Stage",
  "endAt": null,
  "id": Any<Number>,
  "isInternshipAbroad": true,
  "postalCode": null,
  "publishAt": null,
  "result": "unknown",
  "startAt": null,
  "state": "published",
  "subject": "test",
  "updatedAt": Any<String>,
}
`;
